--- a/libs/f-profile/src/lib/components/different-data/different-data.component.html
+++ b/libs/f-profile/src/lib/components/different-data/different-data.component.html
@@ -1,19 +1,16 @@
+<button (click)="close()">CLick  Here</button>
 <div class="container">
 	<div class="left">
-		<h2>Days before the end of the month</h2>
-		 <mat-progress-spinner
-	        [color]="colorSpinner"
-	        [mode]="modeSpinner"
-	        [value]="percentBeforeEndMonth"
-	        >
-	    </mat-progress-spinner>
-    	<div class="days-end-month">{{dayNow}}</div>
-    	<div class="data-for-spinner">
-    		<ul type="disc">
-    			<li class="days1"><p  class="passed">Days passed</p></li>
-    			<li class="days2"><p class="passed">Days left</p></li>
-    		</ul>
-    	</div>
+		<h2>Before the end of the month</h2>
+		<div *ngIf="dataOfDay">
+			 <mat-progress-spinner
+		        [color]="colorSpinner"
+		        [mode]="modeSpinner"
+		        [value]="dataOfDay.percentBeforeEndMonth"
+		    >	
+		    </mat-progress-spinner>
+	    	<div class="days-end-month">{{dataOfDay.day}}</div>
+		</div>
 	</div>
 	<div class="center">
 		<h2>Level of Actions</h2>
@@ -26,16 +23,22 @@
 		  <!-- Position Column -->
 		  <ng-container matColumnDef="name">
 		    <th mat-header-cell *matHeaderCellDef> Name </th>
-		    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+		    <td mat-cell *matCellDef="let element"> {{element.member}} </td>
 		  </ng-container>
 
 		  <!-- Name Column -->
 		  <ng-container matColumnDef="line">
 		    <th mat-header-cell *matHeaderCellDef> Line </th>
 		    <td mat-cell *matCellDef="let element">
-		    	<mat-progress-bar
+		    	<mat-progress-bar class="progress-bar"
 	     	     [mode]="modeBar"
-	     	     [value]="element.average"
+	     	     color="warn"
+	     	     [value]="element.pourcentConsum"
+	     	     [bufferValue]="bufferValueBar">
+	      		</mat-progress-bar>
+      			<mat-progress-bar 
+	     	     [mode]="modeBar"
+	     	     [value]="element.pourcentConsum"
 	     	     [bufferValue]="bufferValueBar">
 	      		</mat-progress-bar>
 		    </td>
@@ -44,17 +47,17 @@
 		  <!-- Weight Column -->
 		  <ng-container matColumnDef="profit">
 		    <th mat-header-cell *matHeaderCellDef> Profit </th>
-		    <td mat-cell *matCellDef="let element"> {{element.profit}} </td>
+		    <td mat-cell *matCellDef="let element"> {{element.profitValue}} </td>
 		  </ng-container>
 
-		  <ng-container matColumnDef="nonProfit">
+		  <ng-container matColumnDef="consumValue">
 		    <th mat-header-cell *matHeaderCellDef> Non Profit </th>
-		    <td mat-cell *matCellDef="let element"> {{element.nonProfit}} </td>
+		    <td mat-cell *matCellDef="let element"> {{element.consumValue}} </td>
 		  </ng-container>
 
 		 <ng-container matColumnDef="average">
 		    <th mat-header-cell *matHeaderCellDef> Porcent </th>
-		    <td mat-cell *matCellDef="let element"> {{element.average}} </td>
+		    <td mat-cell *matCellDef="let element"> {{element.pourcentConsum}} </td>
 		  </ng-container>
 
 
